ローカル環境のみの仕様を改善

--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
        function change_up_text(){
             var changetext = document.getElementById("activity_text");
             if (changetext.textContent == "ロボット製作") {
-                changetext.innerHTML = "<a href='activity.html#2'>P.S等事業関連</a>";
+                changetext.innerHTML = "<a href='activity.html'>P.S等事業関連</a>";
             }else{
                 if (changetext.textContent == "P.S等事業関連") {
-                    changetext.innerHTML = "<a href='activity.html#3'>フォトグラフ</a>";
+                    changetext.innerHTML = "<a href='activity.html'>フォトグラフ</a>";
                 }else{
                     if (changetext.textContent == "フォトグラフ") {
-                        changetext.innerHTML = "<a href='activity.html#4'>Webアプリ等</a>";
+                        changetext.innerHTML = "<a href='activity.html'>Webアプリ等</a>";
                     }else{
                         if (changetext.textContent == "Webアプリ等") {
-                            changetext.innerHTML = "<a href='activity.html#5'>動画制作関連</a>";
+                            changetext.innerHTML = "<a href='activity.html'>動画制作関連</a>";
                         }else{
                             if (changetext.textContent == "動画制作関連") {
-                                changetext.innerHTML = "<a href='activity.html#1'>ロボット製作</a>";
+                                changetext.innerHTML = "<a href='activity.html'>ロボット製作</a>";
                             }  
                         }
                     }
@@ -166,19 +166,19 @@
         function change_down_text(){
             var changetext = document.getElementById("activity_text");
             if (changetext.textContent == "ロボット製作") {
-                changetext.innerHTML = "<a href='activity.html#5'>動画制作関連</a>";
+                changetext.innerHTML = "<a href='activity.html'>動画制作関連</a>";
             }else{
                 if (changetext.textContent == "動画制作関連") {
-                    changetext.innerHTML = "<a href='activity.html#4'>Webアプリ等</a>";
+                    changetext.innerHTML = "<a href='activity.html'>Webアプリ等</a>";
                 }else{
                     if (changetext.textContent == "Webアプリ等") {
-                        changetext.innerHTML = "<a href='activity.html#3'>フォトグラフ</a>";
+                        changetext.innerHTML = "<a href='activity.html'>フォトグラフ</a>";
                     }else{
                         if (changetext.textContent == "フォトグラフ") {
-                            changetext.innerHTML = "<a href='activity.html#2'>P.S等事業関連</a>";
+                            changetext.innerHTML = "<a href='activity.html'>P.S等事業関連</a>";
                         }else{
                             if (changetext.textContent == "P.S等事業関連") {
-                                changetext.innerHTML = "<a href='activity.html#1'>ロボット製作</a>";
+                                changetext.innerHTML = "<a href='activity.html'>ロボット製作</a>";
                             }  
                         }
                     }
