--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </div>
     <section>
     <center>
-        <h2><a href="history.html"class="mainlink">Contact</a></h2>
+        <h2><a href="mailto:yasuyasu_@outlook.jp"class="mainlink">Contact</a></h2>
         <p class="top_text">連絡先はこちら(メール)</p>
     </center>
     </section>
