--- a/activity.html
+++ b/activity.html
@@ -27,7 +27,7 @@
      <br>
      <li class="page_nav"><a href="link.html">LINKS</a></li>
      <br>
-     <li class="page_nav">CONTACTS</li>   
+     <li class="page_nav"><a href="mailto:yasuyasu_@outlook.jp">CONTACTS</a></li>   
     </ul>
    </td>
    <td valign="top" class="activity_tab">
@@ -78,7 +78,7 @@
         <br>
         <li class="page_nav"><a href="link.html">LINKS</a></li>
         <br>
-        <li class="page_nav">CONTACTS</li>   
+        <li class="page_nav"><a href="mailto:yasuyasu_@outlook.jp">CONTACTS</a></li>   
        </ul>
       </td>
       <td valign="top" class="activity_tab">
@@ -110,7 +110,7 @@
         <br>
         <li class="page_nav"><a href="link.html">LINKS</a></li>
         <br>
-        <li class="page_nav">CONTACTS</li>   
+        <li class="page_nav"><a href="mailto:yasuyasu_@outlook.jp">CONTACTS</a></li>   
        </ul>
       </td>
       <td valign="top" class="activity_tab">
@@ -140,7 +140,7 @@
         <br>
         <li class="page_nav"><a href="link.html">LINKS</a></li>
         <br>
-        <li class="page_nav">CONTACTS</li>   
+        <li class="page_nav"><a href="mailto:yasuyasu_@outlook.jp">CONTACTS</a></li>   
        </ul>
       </td>
       <td valign="top" class="activity_tab">
@@ -173,7 +173,7 @@
         <br>
         <li class="page_nav"><a href="link.html">LINKS</a></li>
         <br>
-        <li class="page_nav">CONTACTS</li>   
+        <li class="page_nav"><a href="mailto:yasuyasu_@outlook.jp">CONTACTS</a></li>   
        </ul>
       </td>
       <td valign="top" class="activity_tab">
@@ -266,7 +266,17 @@
   }
 </script>
 </div>
+<div class="menu">
 <div id="mob_view">
+  <label for="menu_bar01">=</label>
+    <input type="checkbox" id="menu_bar01" />
+    <ul id="links01">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="">ACTIVITY</a></li>
+        <li><a href="link.html">LINK</a></li>
+        <li><a href="mailto:yasuyasu_@outlook.jp</a>">CONTACT</a></li>
+    </ul>
+</div>
   <section class="box_mob">
    <img class="activity_img" src="img/activity_1_a.jpg">
        <p class="activity_title">ロボット制作</p>
