--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="CSS/style.css" media="screen and (min-width: 480px)">
+  <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
   <title>Sazuka Okunishi Profile</title>
