メニューバーを追加

--- a/history.html
+++ b/history.html
@@ -25,6 +25,17 @@
             </ul>
           </nav>
     </header>
+    <div class="menu">
+      <label for="menu_bar01">Sazuka OKunishi</label>
+        <input type="checkbox" id="menu_bar01" />
+        <ul id="links01">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">ACTIVITY</a></li>
+            <li><a href="history.html">HISTORY</a></li>
+            <li><a href="link.html">LINK</a></li>
+            <li><a href="mailto:yasuyasu_@outlook.jp</a>">CONTACT</a></li>
+        </ul>
+    </div>
     <img class="image_top" src="img/history_top.jpg">
     <p class="history_title_1">略歴(Histories)</p>
     <p class="history_detail"><b>2019年3月</b></p>
