--- a/activity.html
+++ b/activity.html
@@ -266,13 +266,15 @@
   }
 </script>
 </div>
-<div class="menu">
+
 <div id="mob_view">
-  <label for="menu_bar01">=</label>
+  <div class="menu">
+  <label for="menu_bar01">Sazuka OKunishi</label>
     <input type="checkbox" id="menu_bar01" />
     <ul id="links01">
         <li><a href="index.html">HOME</a></li>
         <li><a href="">ACTIVITY</a></li>
+        <li><a href="history.html">HISTORY</a></li>
         <li><a href="link.html">LINK</a></li>
         <li><a href="mailto:yasuyasu_@outlook.jp</a>">CONTACT</a></li>
     </ul>
