--- a/link.html
+++ b/link.html
@@ -24,6 +24,17 @@
             </ul>
           </nav>
     </header>
+    <div class="menu">
+      <label for="menu_bar01">Sazuka OKunishi</label>
+        <input type="checkbox" id="menu_bar01" />
+        <ul id="links01">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="">ACTIVITY</a></li>
+            <li><a href="history.html">HISTORY</a></li>
+            <li><a href="link.html">LINK</a></li>
+            <li><a href="mailto:yasuyasu_@outlook.jp</a>">CONTACT</a></li>
+        </ul>
+    </div>
     <img class="image_top" src="img/link_top.png">
     <p class="history_title">各種リンク(個人)</p>
     <p class="history_detail_sub"><a href="https://www.facebook.com/osazuka">FaceBook</a></p>
