--- a/history.html
+++ b/history.html
@@ -30,7 +30,7 @@
         <input type="checkbox" id="menu_bar01" />
         <ul id="links01">
             <li><a href="index.html">HOME</a></li>
-            <li><a href="">ACTIVITY</a></li>
+            <li><a href="activity.html">ACTIVITY</a></li>
             <li><a href="history.html">HISTORY</a></li>
             <li><a href="link.html">LINK</a></li>
             <li><a href="mailto:yasuyasu_@outlook.jp</a>">CONTACT</a></li>
