--- a/activity.html
+++ b/activity.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
-  <title>Sazuka Okunishi Profile</title>
+  <title>Activity Sazuka Okunishi</title>
   
   <meta />
     <!--スクロール関連の処理-->
