--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
-  <title>Sazuka Okunishi Profile</title>
+  <title>奥西授 Sazuka Okunishi Profile</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <meta />
-
+  <meta name="google-site-verification" content="aoz8bOqnNX3yCCX6gpzzCTakw5lnybS307mEJ3LA6EU" />
 </head>
 <body link="white" vlink="white">
   <!--<div class="main-visual" id="main-visual">
