--- a/history.html
+++ b/history.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
-  <title>Sazuka Okunishi Profile</title>
+  <title>History Sazuka Okunishi</title>
   
   <meta />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
