--- a/link.html
+++ b/link.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="icon" type="image/jpg" href="icon.jpg">
   <link rel="apple-touch-icon" sizes="180x180" href="icon.jpg">
-  <title>Sazuka Okunishi Profile</title>
+  <title>Link Sazuka Okunishi</title>
   
   <meta />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  
   </head>
   <body link="white" vlink="white">
     <header>
