--- a/history.html
+++ b/history.html
@@ -185,10 +185,15 @@
     <p class="history_detail"><b>2022年2月</b></p>
     <ul>
      <li class="history_detail_sub">SAPに登壇</li>
+     <li class="history_detail_sub">立命館守山高校卒業</li>
     </ul>
     <p class="history_detail"><b>2022年3月</b></p>
     <ul>
-     <li class="history_detail_sub">守山市広報誌に掲載(予定)</li>
+     <li class="history_detail_sub">守山市広報誌に掲載</li>
+     <li class="history_detail_sub">shigovhackに参加</li>
+     <li class="history_detail_sub">NHK沼にはまって聞いてみた出演</li>
+     <li class="history_detail_sub">学校説明会に登壇</li>
+     <li class="history_detail_sub">高校Sci-Tech部引退</li>
     </ul>
     <center>
       <footer>
