--- a/history.html
+++ b/history.html
@@ -195,6 +195,20 @@
      <li class="history_detail_sub">学校説明会に登壇</li>
      <li class="history_detail_sub">高校Sci-Tech部引退</li>
     </ul>
+    <p class="history_detail"><b>2022年4月</b></p>
+    <ul>
+     <li class="history_detail_sub">立命館大学入学</li>
+     <li class="history_detail_sub">ロボカップジュニアJapan Open 2022京阪奈参加(WSL部門21位)</li>
+     <li class="history_detail_sub">Ri-one入団</li>
+    </ul>
+    <p class="history_detail"><b>2022年5月</b></p>
+    <ul>
+     <li class="history_detail_sub">サスアド！参加</li>
+    </ul>
+    <p class="history_detail"><b>2022年6月</b></p>
+    <ul>
+     <li class="history_detail_sub">探究留学事業事業委託</li>
+    </ul>
     <center>
       <footer>
           &copy; Okunishi 2022
