--- a/index.html
+++ b/index.html
@@ -41,11 +41,18 @@
      </tr>
     </table>
   </div>
+  <div class="tankyu">
+  <a href="https://psofficial1006.wixsite.com/homepage/多良木">
+  <img src="img/tankyu.png">
+  </a>
+  </div>
   <h2 class="myname">奥西 授</h2>
   <P class="about_text">初めまして(おくにしさずか)と言います。<br>技術系の分野を中心に色々やってます。
-　<br>
-  <br>立命館守山高校3年GLsコース
-　<br>高校Sci-Tech部部長
+　<br>探究留学inたらぎ参加者募集中
+  <br>
+  <br>立命館守山高校(卒業)
+  <br>立命館大学理工学部1回生
+　<br>高校Sci-Tech部前部長
 　<br>GENIEメンバー
 　<br>P.S共同代表
   <br>AEGISキャプテン<br>
