--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
   <P class="about_text">初めまして(おくにしさずか)と言います。<br>技術系の分野を中心に色々やってます。
   <br>
   <br>立命館守山高校(卒業)
-  <br>立命館大学理工学部1回生
+  <br>立命館大学理工学部2回生
+  <br>立命館大学鉄道研究会渉外
+  <br>Ri-one 教育局長
 　<br>高校Sci-Tech部前部長
-　<br>GENIEメンバー
-　<br>P.S共同代表
-  <br>AEGISキャプテン<br>
+　<br>GENIEメンバー<br>
 　</P>
   <div class="about_text">
   <hr>
